First Draft of the Theme JSON Files
This has the first JSON file added to allow for easy graphic changes.

--- a/.gitignore
+++ b/.gitignore
@@ -325,3 +325,29 @@ node_modules/type-is/package.json
 node_modules/type-is/README.md
 node_modules/unpipe/HISTORY.md
 node_modules/unpipe/index.js
+public/Themes/Default/playerinfo.json
+public/js/control-panel.js
+public/html/control-panel.html
+node_modules/ws/README.md
+node_modules/ws/package.json
+node_modules/ws/LICENSE
+node_modules/ws/lib/websocket.js
+node_modules/ws/lib/websocket-server.js
+node_modules/ws/lib/validation.js
+node_modules/ws/lib/stream.js
+node_modules/ws/lib/sender.js
+node_modules/ws/lib/receiver.js
+node_modules/ws/lib/permessage-deflate.js
+node_modules/ws/lib/extension.js
+node_modules/ws/lib/event-target.js
+node_modules/ws/lib/constants.js
+node_modules/ws/lib/buffer-util.js
+node_modules/ws/index.js
+node_modules/ws/browser.js
+node_modules/async-limiter/readme.md
+node_modules/async-limiter/package.json
+node_modules/async-limiter/LICENSE
+node_modules/async-limiter/index.js
+node_modules/async-limiter/.travis.yml
+node_modules/async-limiter/.nycrc
+node_modules/async-limiter/.eslintignore
