Revert "Revert "Merge branch 'dev-ronna'""
This reverts commit fa88c9eaadf313cf2f4a0090ec9a3d57ea493c9c.

--- a/.gitignore
+++ b/.gitignore
@@ -905,3 +905,5 @@ node_modules/body-parser/node_modules/bytes/package.json
 node_modules/body-parser/node_modules/bytes/LICENSE
 node_modules/body-parser/node_modules/bytes/index.js
 node_modules/body-parser/node_modules/bytes/History.md
+
+control-panel.html
